[package]
name = "ndimage"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple library for conversion between ndarray and image"
repository = "https://github.com/weiyunfei/ndimage"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.9"
ndarray="0.15.6"