[package]
name = "ndimage"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple library for conversion between ndarray and image"
repository = "https://github.com/weiyunfei/ndimage"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.9"
ndarray="0.15.6"
log="0.4"

[dev-dependencies]
ndarray-npy = "0.8.1"
anyhow = "1.0"

